--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Top 2 films</h1>
     <hr>
 
-    <div id="nav">
+    <nav>
       <ul>
         <li class="btn">
           <b>Films</b>
@@ -27,7 +27,7 @@
           </ul>
         </li>
       </ul>
-    </div>
+    </nav>
 
     <ol class="contenu">
       <li>
